--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     	}
     ],
     "require": {
-         "php": ">=5.5.0"
+        "php": ">=5.5.0",
+        "symfony/event-dispatcher": "~3.0",
+        "container-interop/container-interop": "~1.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
