--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "shrimp-wechat-sdk/shrimp-wechat-sdk",
 	"type": "library",
-    "description": "小虾米微信公众平台SDK库",
+    "description": "小虾米微信公众平台SDK",
     "keywords": ["weixin", "SDK", "wechat", "wechat sdk", "weixin sdk"],
     "license": "MIT",
     "authors": [
@@ -12,8 +12,7 @@
     	}
     ],
     "require": {
-        "php": ">=7.1.0",
-		"guzzlehttp/guzzle": "^6.2"
+        "php": ">=5.5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
