--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     	}
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/event-dispatcher": "^3.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
