--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
         "phpunit/phpunit": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.3"
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "php-coveralls/php-coveralls": "^2.0"
     },
     "autoload": {
     	"psr-0": {
