--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     	}
     ],
     "require": {
-        "php": "~7.2",
-        "symfony/event-dispatcher": "^4.2",
+        "php": ">=7.2",
+        "symfony/event-dispatcher": "^5.1",
+        "guzzlehttp/guzzle": "^7.2.0",
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "ext-curl": "*",
@@ -23,15 +24,20 @@
         "ext-fileinfo": "*"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.5",
-        "phpunit/phpunit": "^7.0",
-        "friendsofphp/php-cs-fixer": "^2.3",
-        "php-coveralls/php-coveralls": "^2.0"
+        "squizlabs/php_codesniffer": "^3.2.3",
+        "phpunit/phpunit": "^9.4",
+        "friendsofphp/php-cs-fixer": "^v2.16.7",
+        "php-coveralls/php-coveralls": "^v2.4.2"
     },
     "autoload": {
     	"psr-4": {
     		"Shrimp\\": "src/"
     	}
+    },
+    "autoload-dev": {
+        "psr-4": {
+          "Shrimp\\Test\\": "tests/"
+        }
     },
     "scripts": {
         "format": [
